--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 test {
